Fixing minor bugs: wallpaper stretching in forms & form window position adjusted

--- a/sass/base/_media.scss
+++ b/sass/base/_media.scss
@@ -396,8 +396,8 @@
         width: 258px;
         min-height: 382px;
         &__close {
-            top: -27px;
-            right: -21px;
+            top: -9px;
+            right: 23px;
             font-size: 38px;
         }
         .feed-form {
