--- a/sass/blocks/_consultation.scss
+++ b/sass/blocks/_consultation.scss
@@ -1,5 +1,5 @@
 .consultation {
-    min-height: 680px;
+    height: 762px;
     background: url(../img/consultation-bg.png) center (center/cover) no-repeat;
     padding: 100px 0 108px 0;
     &__descr {
